# fitbenchmarking

./: .codecarbon.config  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  .zenodo.json  CITATION.cff  LICENSE.txt  README.md  actual.out  azure-pipelines.yml  build_cutest.sh  build_gsl.sh  build_ralfit.sh  checkpoint.json  conftest.py  correcting_error.txt  crystalfit_options.ini  errors_SIF.txt  errors_hogben.txt  errors_nist_average.txt  errors_nist_high.txt  errors_nist_low.txt  new.html  new_errors_HOGBEN.txt  new_errors_NIST_average.txt  new_errors_NIST_high.txt  new_errors_NIST_low.txt  new_errors_SIF.txt  pyproject.toml  requirements.txt  setup.py  test_options_tests.ini
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  documentation_request.md  feature_request.md  testing.md
.github/workflows/: build_container.yml  github-actions-tests.yml  install.yml  integration.yml  linting.yml  main.yml  nightly.yml  precommit_update.yml  release.yml
Container/: Containerfile  mantid.patch
Containers/full-tests/: Containerfile
Containers/mantid-tests/: Containerfile
Docker/: Dockerfile
Docker/BasicInstall/: Dockerfile
Docker/FullInstall/: Dockerfile
FitBenchmarking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmark_problems/: README.md  format_data_files.py
benchmark_problems/1D_data/: prob_def_1.txt  prob_def_2.txt
benchmark_problems/Muon/: Muon_67068_coadd_67108_long.txt  Muon_HIFI_113856.txt  Muon_HIFI_116891.txt
benchmark_problems/Muon_data/: Muon_67068_coadd_67108_long.txt  Muon_EMU_73673.txt  Muon_HIFI_113856.txt  Muon_HIFI_116891.txt
benchmark_problems/Neutron/: ENGINX193749_calibration_peak20.txt  ENGINX193749_calibration_peak23.txt  ENGINX193749_calibration_peak6.txt  ENGINX236516_vanadium_bank1_10brk.txt  EVS14188-90_Gaussian_peaks_1.txt  EVS14188-90_Gaussian_peaks_2.txt  GEMpeak1.txt  WISH17701_peak3.txt  WISH17701_peak4.txt  WISH17701_peak5.txt  WISH17701_peak6.txt  WISH17701_peak8.txt  WISH17701_peak9.txt
benchmark_problems/Neutron_data/: ENGINX193749_calibration_peak19.txt  ENGINX193749_calibration_peak20.txt  ENGINX193749_calibration_peak23.txt  ENGINX193749_calibration_peak5.txt  ENGINX193749_calibration_peak6.txt  ENGINX236516_vanadium_bank1_10brk.txt  ENGINX236516_vanadium_bank1_20brk.txt  EVS14188-90_Gaussian_peaks_1.txt  EVS14188-90_Gaussian_peaks_2.txt  WISH17701_peak1.txt  WISH17701_peak2.txt  WISH17701_peak3.txt  WISH17701_peak4.txt  WISH17701_peak5.txt  WISH17701_peak6.txt  WISH17701_peak7.txt  WISH17701_peak8.txt  WISH17701_peak9.txt
benchmark_problems/combined_Muon/: GEMpeak1.txt
benchmark_problems/format_data_files_script/: format_data_files.py
benchmark_problems/format_data_files_scripts/: README.md  format_data_files.py  prepend_format_in_files.py
benchmark_problems/test/: GEMpeak1.txt
ci/: docker_template.yml  linting_tests.sh  prep_and_tag_release.sh  system_tests.sh  system_tests_default.sh  system_tests_mantid.sh  unit_tests.sh  unit_tests_default.sh  unit_tests_mantid.sh
docs/: Makefile  README.md  make.bat  requirements.txt
docs/concept_figure/: concept.ini
docs/source/: conf.py  index.rst
example_scripts/: README.md  SasView_example.py  example_runScripts.py  example_runScripts_SasView.py  example_runScripts_expert.py  example_runScripts_mantid.py  example_runScripts_verbose.py  options_template.ini
example_scripts/tests/: test_examples.py
examples/: all_softwares.ini  fitit.ini  jac_test_template.ini  options_do_not_work.ini  options_template.ini  options_work.ini
examples/benchmark_problems/: README.md
fitbenchmarking/: __main__.py  example_runScripts.py  fitbenchmark _one_problem.py  fitbenchmark_one_problem.py  fitbenchmarking_default_options.ini  fitbenchmarking_default_options.json  fitting_benchmarking.py  input_parsing.py  logging_setup.py  logscript.py  minimizers_list_default.json  plotHelper.py  post_processing.py  results_output.py  runScripts.py  test_problem.py  test_result.py
fitbenchmarking/HTML_templates/: blank_page.html  compare_table_info.html  custom_style.css  index_page.html  main_style.css  problem_index_page.html  results_template.html  style_sheet.css  style_sheet.html  style_sheet.py  support_page_template.html  table.css  table_descriptions.rst  table_style.css  table_template.html
fitbenchmarking/Templates/: style_sheet.py  table_template.html
fitbenchmarking/cli/: checkpoint_handler.py  exception_handler.py  main.py
fitbenchmarking/controllers/: aoclda_controller.py  base_controller.py  base_matlab_controller.py  bumps_controller.py  ceres_controller.py  controller_factory.py  dfo_controller.py  dfogn_controller.py  fitit_controller.py  galahad_controller.py  globalmultistart_controller.py  gofit_controller.py  gradient_free_controller.py  gsl_controller.py  horace_controller.py  kmpfit_controller.py  levmar_controller.py  lmfit_controller.py  mantid_controller.py  matlab_controller.py  matlab_curve_controller.py  matlab_mixin.py  matlab_opt_controller.py  matlab_stats_controller.py  minuit_controller.py  nlopt_controller.py  paramonte_controller.py  pyro_controller.py  quickbayes_controller.py  ralfit_controller.py  rat_controller.py  sasfit_controller.py  sasview_controller.py  scipy_controller.py  scipy_go_controller.py  scipy_leastsq_controller.py  scipy_ls_controller.py  scipy_ls_supports_bounds_controller.py  scipy_supports_bounds_controller.py  smoothd_controller.py  (+2 more)
fitbenchmarking/core/: fitbenchmark_one_problem.py  fitting_benchmarking.py  results_output.py
new_results/: checkpoint.json  results_index.html
paper/: paper.bib  paper.md
pipelines/: docker_template.yml  system_tests_default.sh
sas/: README.md
system_tests/: generate_current_results.py  system_test.py
systests/: generate_current_results.py  tbl_comparison.py
travis/: default_install.sh  full_install.sh  linting_install.sh  linting_tests.sh  py27_mantid_install.sh  system_tests.sh  system_tests_default.sh  unit_tests.sh  unit_tests_default.sh
(+1581 files in other folders)
